--- a/src/main/views/choose-area-of-law.njk
+++ b/src/main/views/choose-area-of-law.njk
@@ -27,7 +27,10 @@
   <div class="govuk-grid-column-two-thirds">
     <form method="POST">
 <div class="govuk-form-group">
-    <fieldset class="govuk-fieldset">
+        {% if errors %}
+            <div class="govuk-error-message govuk-form-group--error">
+        {% endif %}
+    <fieldset class="govuk-fieldset" aria-describedby="choose-area-of-law-error">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <h1 class="govuk-fieldset__heading">
                 {{ question }}
@@ -35,17 +38,17 @@
         </legend>
         <div class="govuk-radios">
         {% if errors %}
-            <span id="#choose-area-of-law" class="govuk-error-message">
+            <span id="choose-area-of-law-error" class="govuk-error-message">
               {{ error.text }}
             </span>
         {% endif %}
         {% for result in results %}
             <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id={{ result.name }} name="chooseAreaOfLaw" type="radio" value={{ result.name }}>
-                <label class="govuk-label govuk-radios__label" for=result.name>
+                <label class="govuk-label govuk-radios__label govuk-label--s" for={{ result.name }}>
                     {{ result.name }}
                 </label>
-                <div id=result.description class="govuk-hint govuk-radios__hint">
+                <div id={{ result.description }} class="govuk-hint govuk-radios__hint">
                     {{ result.description }}
                 </div>
             </div>
@@ -53,7 +56,7 @@
             <div class="govuk-radios__divider">or</div>
             <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="not-listed" name="chooseAreaOfLaw" type="radio" value="not-listed">
-                <label class="govuk-label govuk-radios__label" for="not-listed">
+                <label class="govuk-label govuk-radios__label govuk-label--s" for="not-listed">
                     {{ answers.a1 }}
                 </label>
             </div>
