e2e for locations details

--- a/src/main/views/court-details/in-person-court.njk
+++ b/src/main/views/court-details/in-person-court.njk
@@ -54,7 +54,7 @@
       </div>
 
       <div class="govuk-grid-row">
-        <p class="govuk-body-m">
+        <p class="govuk-body-m" id="direction-map">
           <a class="govuk-link" href="https://maps.google.com/maps?q={{ results.lat }},{{ results.lon }}">{{ directionsText }}</a>
         </p>
         <p class="govuk-body-m">
