--- a/src/main/views/choose-area-of-law.njk
+++ b/src/main/views/choose-area-of-law.njk
@@ -44,8 +44,8 @@
         {% endif %}
         {% for result in results %}
             <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id={{ result.name }} name="chooseAreaOfLaw" type="radio" value={{ result.name }}>
-                <label class="govuk-label govuk-radios__label govuk-label--s" for={{ result.name }}>
+                <input class="govuk-radios__input" id={{ result.name | lower | replace(" ", "-") | replace(",", "") }} name="chooseAreaOfLaw" type="radio" value={{ result.name | lower | replace(" ", "-") | replace(",", "") }}>
+                <label class="govuk-label govuk-radios__label govuk-label--s" for={{ result.name | lower | replace(" ", "-") | replace(",", "") }}>
                     {{ result.name }}
                 </label>
                 <div id={{ result.description }} class="govuk-hint govuk-radios__hint">
