--- a/src/main/views/childcare-and-parenting-area-of-law.njk
+++ b/src/main/views/childcare-and-parenting-area-of-law.njk
@@ -26,50 +26,43 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <form method="POST">
-      {{ govukRadios({
-        idPrefix: "childcare-and-parenting-area-of-law",
-        name: "childcareAndParentingAreaOfLaw",
-        fieldset: {
-          legend: {
-            text: question,
-            classes: "govuk-fieldset__legend--l",
-            isPageHeading: true
-          }
-        },
-        errorMessage: { text: error.text | safe } if errors,
-        items: [
-          {
-            id: "childcare",
-            text: answers.a1,
-            label: {
-                classes: "govuk-label--s"
-            },
-            hint: {
-                    text: hint1
-            }
-          },
-          {
-            id: "adoption",
-            text: answers.a2,
-            label: {
-              classes: "govuk-label--s"
-            },
-            hint: {
-                    text: hint2
-            }
-          },
-          {
-             divider: "or"
-          },
-          {
-             id: "not-listed",
-             text: answers.a3,
-             label: {
-                  classes: "govuk-label--s"
-            }
-          }
-        ]
-      }) }}
+<div class="govuk-form-group">
+        {% if errors %}
+            <div class="govuk-error-message govuk-form-group--error">
+        {% endif %}
+    <fieldset class="govuk-fieldset" aria-describedby="childcare-and-parenting-area-of-law-error">
+        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+            <h1 class="govuk-fieldset__heading">
+                {{ question }}
+            </h1>
+        </legend>
+        <div class="govuk-radios">
+        {% if errors %}
+            <span id="childcare-and-parenting-area-of-law-error" class="govuk-error-message">
+              {{ error.text }}
+            </span>
+        {% endif %}
+        {% for result in results %}
+            <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id={{ result.name | lower | replace(" ", "-") | replace(",", "") }} name="childcareAndParentingAreaOfLaw" type="radio" value={{ result.name | lower | replace(" ", "-") | replace(",", "") }}>
+                <label class="govuk-label govuk-radios__label govuk-label--s" for={{ result.name | lower | replace(" ", "-") | replace(",", "") }}>
+                    {{ result.name }}
+                </label>
+                <div id={{ result.description }} class="govuk-hint govuk-radios__hint">
+                    {{ result.description }}
+                </div>
+            </div>
+        {% endfor %}
+            <div class="govuk-radios__divider">or</div>
+            <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="not-listed" name="childcareAndParentingAreaOfLaw" type="radio" value="not-listed">
+                <label class="govuk-label govuk-radios__label govuk-label--s" for="not-listed">
+                    {{ answers.a1 }}
+                </label>
+            </div>
+        </div>
+    </fieldset>
+</div>
       {{ govukButton({
         text: button,
         classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8"
