--- a/src/main/views/family-area-of-law.njk
+++ b/src/main/views/family-area-of-law.njk
@@ -20,7 +20,7 @@
 
 {% block content %}
 {% if errors %}
-  {{ errorSummary(error.title, error.text, "#family-area-of-law") }}
+  {{ errorSummary(error.title, error.text, "#family-area-of-law-error") }}
 {% endif %}
 
 <div class="govuk-grid-row">
