--- a/src/main/views/court-details/not-in-person-court.njk
+++ b/src/main/views/court-details/not-in-person-court.njk
@@ -12,7 +12,7 @@
 
   {{ govukBackLink({
     text: "Back",
-    href: "/search-for-location"
+    href: "/courts"
   }) }}
 {% endblock %}
 
@@ -32,16 +32,18 @@
           <h2 class="govuk-heading-l postal-address">
             {{ contactUsHeading }}
           </h2>
-          <h3 class="govuk-heading-m">
-            {{ results.addresses[0].type }}:
-          </h3>
-          <p class="govuk-body-m address">
-            {% for addressLine in results.addresses[0].address_lines %}
-            {{ addressLine }}<br>
-            {% endfor %}
-            {{ results.addresses[0].town }}<br>
-            {{ results.addresses[0].postcode }}
-          </p>
+          {% if results.addresses[0] %}
+            <h3 class="govuk-heading-m">
+              {{ results.addresses[0].type }}:
+            </h3>
+            <p class="govuk-body-m address">
+              {% for addressLine in results.addresses[0].address_lines %}
+              {{ addressLine }}<br>
+              {% endfor %}
+              {{ results.addresses[0].town }}<br>
+              {{ results.addresses[0].postcode }}
+            </p>
+          {% endif %}
         </div>
       </div>
 
