--- a/src/main/views/court-details/in-person-court.njk
+++ b/src/main/views/court-details/in-person-court.njk
@@ -236,6 +236,26 @@
           {% endif %}
         </div>
       {% endif %}
+      <div class="govuk-grid-row" id="access-scheme">
+        <h3 class="govuk-heading-m">
+          {{ accessSchemeHeading }}
+        </h3>
+        {% if results['access_scheme'] %}
+          <p class="govuk-body-m">
+            {{ registerACText }}
+          </p>
+          <a class="govuk-link govuk-body-m" href="https://www.gov.uk/guidance/professional-users-court-and-tribunal-access-scheme">
+            {{ registerACLink }}
+          </a>
+        {% else %}
+          <p class="govuk-body-m">
+            {{ learnACText }}
+          </p>
+          <a class="govuk-link govuk-body-m" href="https://www.gov.uk/guidance/professional-users-court-and-tribunal-access-scheme">
+            {{ learnACLink }}
+          </a>
+        {% endif %}
+      </div>
     </div>
   </div>
 </div>
