--- a/src/main/views/service.njk
+++ b/src/main/views/service.njk
@@ -20,7 +20,7 @@
 
 {% block content %}
 {% if errors %}
-  {{ errorSummary(error.title, error.text, "#service-area-error") }}
+  {{ errorSummary(error.title, error.text, "#radio-buttons") }}
 {% endif %}
 
 <div class="govuk-grid-row">
@@ -43,7 +43,7 @@
             </span>
         {% endif %}
         {% for result in results %}
-            <div class="govuk-radios__item">
+            <div class="govuk-radios__item" id="radio-buttons">
                 <input class="govuk-radios__input" id={{ result.name | lower | replace(" ", "-") | replace(",", "") }} name="serviceArea" type="radio" value={{ result.name | lower | replace(" ", "-") | replace(",", "") }}>
                 <label class="govuk-label govuk-radios__label govuk-label--s" for={{ result.name | lower | replace(" ", "-") | replace(",", "") }}>
                     {{ result.name }}
