--- a/src/main/views/service.njk
+++ b/src/main/views/service.njk
@@ -21,7 +21,7 @@
 {% block content %}
 {% if errors %}
 {% for result in results.slice(0, 1) %}
-{% set firstRadio = "#" + result.name %}
+{% set firstRadio = "#" + result.name | lower | replace(" ", "-") | replace(",", "") %}
 {{ errorSummary(error.title, error.text, firstRadio ) }}
 {% endfor %}
 {% endif %}
@@ -47,8 +47,8 @@
         {% endif %}
         {% for result in results %}
             <div class="govuk-radios__item" id="radio-buttons">
-                <input class="govuk-radios__input" id={{ result.name }} name="serviceArea" type="radio" value={{ result.name | lower | replace(" ", "-") | replace(",", "") }}>
-                <label class="govuk-label govuk-radios__label govuk-label--s" for={{ result.name }}>
+                <input class="govuk-radios__input" id={{ result.name | lower | replace(" ", "-") | replace(",", "") }} name="serviceArea" type="radio" value="serviceAreaChosen{{ loop.index }}" >
+                <label class="govuk-label govuk-radios__label govuk-label--s" for={{ result.name | lower | replace(" ", "-") | replace(",", "") }}>
                     {{ result.name }}
                 </label>
                 <div id={{ result.description }} class="govuk-hint govuk-radios__hint">
