--- a/src/main/views/unknown-service.njk
+++ b/src/main/views/unknown-service.njk
@@ -1,5 +1,9 @@
 {% extends "template.njk" %}
 
+{% block pageTitle %}
+{{ title }}
+{% endblock %}
+
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
