--- a/src/main/views/service.njk
+++ b/src/main/views/service.njk
@@ -46,12 +46,12 @@
             </span>
         {% endif %}
         {% for result in results %}
-            <div class="govuk-radios__item" id="radio-buttons">
+            <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id={{ result.name | lower | replace(" ", "-") | replace(",", "") }} name="serviceArea" type="radio" value="serviceAreaChosen{{ loop.index }}" >
                 <label class="govuk-label govuk-radios__label govuk-label--s" for={{ result.name | lower | replace(" ", "-") | replace(",", "") }}>
                     {{ result.name }}
                 </label>
-                <div id={{ result.description }} class="govuk-hint govuk-radios__hint">
+                <div class="govuk-hint govuk-radios__hint">
                     {{ result.description }}
                 </div>
             </div>
