--- a/src/main/views/choose-service.njk
+++ b/src/main/views/choose-service.njk
@@ -21,7 +21,7 @@
 {% block content %}
 {% if errors %}
 {% for result in results.slice(0, 1) %}
-{% set firstRadioService = "#serviceChosen1" %}
+{% set firstRadioService = "#" + result.slug %}
 {{ errorSummary(error.title, error.text, firstRadioService) }}
 {% endfor %}
 {% endif %}
@@ -47,8 +47,8 @@
         {% endif %}
         {% for result in results %}
             <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="serviceChosen{{ loop.index }}" name="chooseService" type="radio" value={{ result.slug }}>
-                <label class="govuk-label govuk-radios__label govuk-label--s" for="serviceChosen{{ loop.index }}">
+                <input class="govuk-radios__input" id={{ result.slug }} name="chooseService" type="radio" value={{ result.slug }}>
+                <label class="govuk-label govuk-radios__label govuk-label--s" for={{ result.slug }}>
                     {{ result.name }}
                 </label>
                 <div id={{ result.description }} class="govuk-hint govuk-radios__hint">
