Fact 59 use service slug (#86)
* FACT-59: Refactor to use slug.

* FACT-59: Refactor to use slug.

* FACT-59: Refactor to use slug.

* FACT-59: Refactor to use slug.

* FACT-59: Fix unit tests.

* FACT-59: Clean up.

* FACT-59: Accessibility fixes.

* FACT-59: Fix unit tests.

* FACT-59: Fix pa11y tests.

* FACT-59: Point to pr-75 to check build before merge.

* Bumping chart version

* FACT-59: Bumping chart version.

* FACT-59: Point back to master and bump chart version.

Co-authored-by: hmcts-jenkins-fact <70752922+hmcts-jenkins-fact[bot]@users.noreply.github.com>

--- a/src/main/views/service.njk
+++ b/src/main/views/service.njk
@@ -21,8 +21,8 @@
 {% block content %}
 {% if errors %}
 {% for result in results.slice(0, 1) %}
-{% set firstRadio = "#" + result.name | lower | replace(" ", "-") | replace(",", "") %}
-{{ errorSummary(error.title, error.text, firstRadio ) }}
+{% set firstRadioServiceArea = "#" + result.name | lower | replace(" ", "-") | replace(",", "") %}
+{{ errorSummary(error.title, error.text, firstRadioServiceArea) }}
 {% endfor %}
 {% endif %}
 
