--- a/src/main/views/choose-service.njk
+++ b/src/main/views/choose-service.njk
@@ -21,8 +21,8 @@
 {% block content %}
 {% if errors %}
 {% for result in results.slice(0, 1) %}
-{% set firstRadio = "#" + result.name | lower | replace(" ", "-") | replace(",", "") %}
-{{ errorSummary(error.title, error.text, firstRadio ) }}
+{% set firstRadioService = "#" + result.slug %}
+{{ errorSummary(error.title, error.text, firstRadioService) }}
 {% endfor %}
 {% endif %}
 
@@ -47,8 +47,8 @@
         {% endif %}
         {% for result in results %}
             <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id={{ result.name | lower | replace(" ", "-") | replace(",", "") }} name="chooseService" type="radio" value="serviceChosen{{ loop.index }}">
-                <label class="govuk-label govuk-radios__label govuk-label--s" for={{ result.name | lower | replace(" ", "-") | replace(",", "") }}>
+                <input class="govuk-radios__input" id={{ result.slug }} name="chooseService" type="radio" value={{ result.slug }}>
+                <label class="govuk-label govuk-radios__label govuk-label--s" for={{ result.slug }}>
                     {{ result.name }}
                 </label>
                 <div id={{ result.description }} class="govuk-hint govuk-radios__hint">
