--- a/src/main/views/search/location.njk
+++ b/src/main/views/search/location.njk
@@ -53,7 +53,7 @@
       <p class="govuk-body">{{ foundResults | safe }}</p>
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
       <div class="search-results" id="search-results">
-        {% for item in results | sort(attribute="name") %}
+        {% for item in results %}
           <h2 class="govuk-heading-m">
             <a class="govuk-link" href="/courts/{{ item.slug }}">{{ item.name }}</a>
           </h2>
