FACT-81: Attempt to add session.

--- a/src/main/views/choose-action.njk
+++ b/src/main/views/choose-action.njk
@@ -43,22 +43,26 @@
         items: [
           {
             id: "nearest-court",
-            text: answers.a1
+            text: answers.a1,
+            value: "nearest"
           },
           {
             id: "document-court",
-            text: answers.a2
+            text: answers.a2,
+            value: "documents"
           },
           {
              id: "update-court",
-             text: answers.a3
+             text: answers.a3,
+             value: "update"
           },
           {
              divider: "or"
           },
           {
              id: "not-listed",
-             text: answers.a4
+             text: answers.a4,
+             value: "not-listed"
           }
         ]
       }) }}
