Fact 96 - changing postcode search to a get request

--- a/src/main/views/postcode-search.njk
+++ b/src/main/views/postcode-search.njk
@@ -30,7 +30,7 @@
         {{ hint }}
       </span>
     </h1>
-    <form method="POST">
+    <form method="GET" action="/search-results">
       {{ govukInput({
         label: {
           text: text,
