--- a/src/main/views/service-results.njk
+++ b/src/main/views/service-results.njk
@@ -1,6 +1,6 @@
-{% from "govuk/components/radios/macro.njk" import govukRadios %}
-{% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
+{% from "govuk/components/input/macro.njk" import govukInput %}
+{% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "macros/error-summary.njk" import errorSummary %}
 
 {% extends "template.njk" %}
@@ -14,25 +14,48 @@
 
   {{ govukBackLink({
     text: "Back",
-    href: "/"
+    href: '/search-option'
   }) }}
 {% endblock %}
 
 {% block content %}
 {% if errors %}
-  {{ errorSummary(error.title, error.text) }}
+  {{ errorSummary(error.title, error.text, "#search") }}
 {% endif %}
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-            <h1 class="govuk-fieldset__heading">
-                {{ question }}
-            </h1>
-      {{ govukButton({
-        text: button,
-        classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8"
-      }) }}
-    </form>
+    <h1 class="govuk-heading-l">{{ question }}
+      <span id="header-hint" class="govuk-hint">
+        {{ hint }}
+      </span>
+    </h1>
+    <div class="govuk-grid-row" id="areas-of-law">
+        <h3 class="govuk-heading-m">
+           {{ applyOnlineHeading }}
+        </h3>
+    </div>
+    {% if (path !== '/search') and (results.length > 0) %}
+      <p class="govuk-body">{{ foundResults | safe }}</p>
+      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+      <div class="search-results" id="search-results">
+        {% for item in results | sort(attribute="name") %}
+          <h2 class="govuk-heading-m">
+            <a class="govuk-link" href="/courts/{{ item.slug }}">{{ item.name }}</a>
+          </h2>
+        {% endfor %}
+      </div>
+    {% elif (path !== '/search') %}
+      <div class="no-search-results" id="no-search-results">
+        <p class="govuk-body-m govuk-!-font-weight-bold">{{ noResults.p1 }}</p>
+        <p class="govuk-body">{{ noResults.p2 }}</p>
+        <ul class="govuk-list govuk-list--bullet">
+        {% for item, text in noResults.list %}
+          <li>{{ text | safe }}</li>
+        {% endfor %}
+        </ul>
+      </div>
+    {% endif %}
   </div>
 </div>
 
