--- a/src/main/views/search/location.njk
+++ b/src/main/views/search/location.njk
@@ -51,6 +51,7 @@
 
     {% if (path !== '/search') and (results.length > 0) %}
       <p class="govuk-body">{{ foundResults | safe }}</p>
+      <p class="govuk-body">{{ mostRelevant | safe }}</p>
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
       <div class="search-results" id="search-results">
         {% for item in results %}
