--- a/src/main/views/service-results.njk
+++ b/src/main/views/service-results.njk
@@ -19,44 +19,42 @@
 {% endblock %}
 
 {% block content %}
-{% if errors %}
-  {{ errorSummary(error.title, error.text, "#search") }}
-{% endif %}
-
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-l">{{ question }}
-      <span id="header-hint" class="govuk-hint">
-        {{ hint }}
-      </span>
+<div class="govuk-grid-row court-tribunal-details">
+  <div class="govuk-grid-column-full">
+    <h1 class="govuk-heading-l">
+      {{ question }}
     </h1>
-    <div class="govuk-grid-row" id="areas-of-law">
-        <h3 class="govuk-heading-m">
-           {{ applyOnlineHeading }}
-        </h3>
-    </div>
-    {% if (path !== '/search') and (results.length > 0) %}
-      <p class="govuk-body">{{ foundResults | safe }}</p>
-      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-      <div class="search-results" id="search-results">
-        {% for item in results | sort(attribute="name") %}
+    <div class="govuk-grid-column-two-thirds">
+      <div class="govuk-grid-row">
+        <div>
+          <p class="govuk-body-m">
+            {{ hint }}
+          </p>
+        </div>
+        <div class="search-results" id="search-results">
           <h2 class="govuk-heading-m">
-            <a class="govuk-link" href="/courts/{{ item.slug }}">{{ item.name }}</a>
+            <a class="govuk-link" href="/courts/{{ slug }}">{{ nameOfCourt }}</a>
           </h2>
-        {% endfor %}
+        </div>
       </div>
-    {% elif (path !== '/search') %}
-      <div class="no-search-results" id="no-search-results">
-        <p class="govuk-body-m govuk-!-font-weight-bold">{{ noResults.p1 }}</p>
-        <p class="govuk-body">{{ noResults.p2 }}</p>
-        <ul class="govuk-list govuk-list--bullet">
-        {% for item, text in noResults.list %}
-          <li>{{ text | safe }}</li>
-        {% endfor %}
-        </ul>
+    </div>
+    <div class="govuk-grid-column-one-third side-content">
+      <div class="govuk-grid-row" id="areas-of-law">
+          <h3 class="govuk-heading-m">
+            {{ applyOnlineHeading }}
+          </h3>
+          <a class="govuk-link" href="{{ applyOnlineUrl }}"> {{ applyOnline }} </a>
       </div>
-    {% endif %}
+    </div>
+    <div class="govuk-grid-column-two-thirds">
+      <div class="govuk-grid-row">
+        <div>
+          <p class="govuk-body-m">
+            {{ regionStatement }}
+          </p>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
-
 {% endblock %}
