FACT-81: Clean up and add to FT.

--- a/src/main/views/service-results.njk
+++ b/src/main/views/service-results.njk
@@ -31,7 +31,7 @@
             {{ hint }}
           </p>
         </div>
-        <div class="search-results" id="search-results">
+        <div class="search-result" id="search-result">
           <h2 class="govuk-heading-m">
             <a class="govuk-link" href="/courts/{{ slug }}">{{ nameOfCourt }}</a>
           </h2>
