FACT-81: Clean up and add UT.

--- a/src/main/views/service-results.njk
+++ b/src/main/views/service-results.njk
@@ -37,22 +37,20 @@
           </h2>
         </div>
       </div>
-    </div>
-    <div class="govuk-grid-column-one-third side-content">
-      <div class="govuk-grid-row" id="areas-of-law">
-          <h3 class="govuk-heading-m">
-            {{ applyOnlineHeading }}
-          </h3>
-          <a class="govuk-link" href="{{ applyOnlineUrl }}"> {{ applyOnline }} </a>
-      </div>
-    </div>
-    <div class="govuk-grid-column-two-thirds">
-      <div class="govuk-grid-row">
-        <div>
+     <div class="govuk-grid-row">
           <p class="govuk-body-m">
             {{ regionStatement }}
           </p>
-        </div>
+     </div>
+    </div>
+    <div class="govuk-grid-column-one-third side-content">
+      <div id="areas-of-law">
+          <h3 class="govuk-heading-m">
+            {{ applyOnlineHeading }}
+          </h3>
+          <p class="govuk-body-m">
+          <a class="govuk-link" href="{{ applyOnlineUrl }}"> {{ applyOnline }} </a>
+          </p>
       </div>
     </div>
   </div>
