--- a/src/main/views/search/location.njk
+++ b/src/main/views/search/location.njk
@@ -19,7 +19,7 @@
 {% endblock %}
 
 {% block content %}
-{% if errors %}
+{% if error %}
   {{ errorSummary(error.title, error.text, "#search") }}
 {% endif %}
 
@@ -53,7 +53,6 @@
 
     {% if (path !== '/search') and (results.length > 0) %}
       <p class="govuk-body">{{ foundResults | safe }}</p>
-      <p class="govuk-body">{{ mostRelevant | safe }}</p>
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
       <div class="search-results" id="search-results">
         {% for item in results %}
