fix merge error

--- a/src/main/views/search/location.njk
+++ b/src/main/views/search/location.njk
@@ -34,7 +34,8 @@
       <form method="GET" action="/courts?lng=cy">
     {% else %}
       <form method="GET" action="/courts">
-      <div class="govuk-form-group {{ 'govuk-form-group--error' if error.text }}" id="form-group">
+    {% endif %}
+        <div class="govuk-form-group {{ 'govuk-form-group--error' if error.text }}" id="form-group">
         <h2 class="govuk-label-wrapper">
           <label class="govuk-label govuk-label--m" for="search">
             {{ text | safe }}
