--- a/src/main/views/search/location.njk
+++ b/src/main/views/search/location.njk
@@ -51,7 +51,7 @@
       </div>
     </form>
 
-    {% if (path !== '/search') and (results.length > 0) %}
+    {% if (path !== '/search-by-name') and (results.length > 0) %}
       <p class="govuk-body">{{ foundResults | safe }}</p>
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
       <div class="search-results" id="search-results">
@@ -61,7 +61,7 @@
           </h2>
         {% endfor %}
       </div>
-    {% elif (path !== '/search') %}
+    {% elif (path !== '/search-by-name') %}
       <div class="no-search-results" id="no-search-results">
         <p class="govuk-body-m govuk-!-font-weight-bold">{{ noResults.p1 }}</p>
         <p class="govuk-body">{{ noResults.p2 }}</p>
