FACT-81: Update tests.

--- a/src/main/views/service.njk
+++ b/src/main/views/service.njk
@@ -21,7 +21,7 @@
 {% block content %}
 {% if errors %}
 {% for result in results.slice(0, 1) %}
-{% set firstRadioServiceArea = "#" + result.name | lower | replace(" ", "-") | replace(",", "") %}
+{% set firstRadioServiceArea = "#" + result.slug %}
 {{ errorSummary(error.title, error.text, firstRadioServiceArea) }}
 {% endfor %}
 {% endif %}
@@ -47,7 +47,7 @@
         {% endif %}
         {% for result in results %}
             <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id={{ result.name | lower | replace(" ", "-") | replace(",", "") }} name="serviceArea" type="radio" value={{ result.slug }} >
+                <input class="govuk-radios__input" id={{ result.slug }} name="serviceArea" type="radio" value={{ result.slug }} >
                 <label class="govuk-label govuk-radios__label govuk-label--s" for={{ result.slug }}>
                     {{ result.name }}
                 </label>
