--- a/src/main/views/service-results.njk
+++ b/src/main/views/service-results.njk
@@ -49,7 +49,7 @@
             {{ applyOnlineHeading }}
           </h3>
           <p class="govuk-body-m">
-          <a class="govuk-link" href="{{ applyOnlineUrl }}"> {{ applyOnline }} </a>
+          <a class="govuk-link" href="{{ onlineUrl }}"> {{ onlineText }} </a>
           </p>
       </div>
     </div>
