FACT-142: FT and update to html.

--- a/src/main/views/service-results.njk
+++ b/src/main/views/service-results.njk
@@ -43,6 +43,7 @@
           </p>
      </div>
     </div>
+    {% if onlineText %}
     <div class="govuk-grid-column-one-third side-content">
       <div id="areas-of-law">
           <h3 class="govuk-heading-m">
@@ -53,6 +54,7 @@
           </p>
       </div>
     </div>
+    {% endif %}
   </div>
 </div>
 {% endblock %}
