using aol and service area type to get postcode search

--- a/src/main/views/postcode-search.njk
+++ b/src/main/views/postcode-search.njk
@@ -32,6 +32,8 @@
       {{ hint }}
     </span>
     <form method="GET" action="{{ actionUrl }}">
+      <input type="hidden" name="aol" value="{{ aol }}"/>
+      <input type="hidden" name="serviceAreaType" value="{{ serviceAreaType }}"/>
       {{ govukInput({
         label: {
           text: text,
