--- a/src/main/views/postcode-results.njk
+++ b/src/main/views/postcode-results.njk
@@ -32,20 +32,22 @@
               {{ multipleResultsHint }}
             </p>
           </div>
-          {% for court in results %}
-            <div class="govuk-grid-row">
-              <div class="govuk-grid-column-three-quarters">
-                <h2 class="govuk-heading-m">
-                  <a class="govuk-link" href="/courts/{{ court.slug }}">{{ court.name }}</a>
-                </h2>
+          <div id="search-results">
+            {% for court in results %}
+              <div class="govuk-grid-row">
+                <div class="govuk-grid-column-three-quarters">
+                  <h2 class="govuk-heading-m">
+                    <a class="govuk-link" href="/courts/{{ court.slug }}">{{ court.name }}</a>
+                  </h2>
+                </div>
+                <div class="govuk-grid-column-one-quarter distance">
+                  <p class="govuk-body-m">
+                    {{ court.distance }} {{ unit }}
+                  </p>
+                </div>
               </div>
-              <div class="govuk-grid-column-one-quarter">
-                <p class="govuk-body-m">
-                  {{ court.distance }} {{ unit }}
-                </p>
-              </div>
-            </div>
-          {% endfor %}
+            {% endfor %}
+          </div>
         {% else %}
           <div>
             <p class="govuk-body-m">
