Add serviceareas text (#114)
* add servicearea text to search results page

* clean up

--- a/src/main/views/service-results.njk
+++ b/src/main/views/service-results.njk
@@ -28,7 +28,8 @@
       <div class="govuk-grid-row">
         <div>
           <p class="govuk-body-m">
-            {{ hint }}
+            {{ hint1 }}
+            {{ hint2 }}
           </p>
         </div>
         <div class="search-result" id="search-result">
