--- a/src/main/views/template.njk
+++ b/src/main/views/template.njk
@@ -4,6 +4,16 @@
 
 {% block head %}
   {% include "webpack/css.njk" %}
+
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push(
+  {'gtm.start': new Date().getTime(),event:'gtm.js'}
+
+  );var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-M3ZT6Q5');</script>
+
 {% endblock %}
 
 {% block header %}
@@ -27,4 +37,8 @@
 {% block bodyEnd %}
   {# Run JavaScript at end of the <body>, to avoid blocking the initial render. #}
   {% include "webpack/js.njk" %}
+
+  <script>
+    dataLayer = [];
+  </script>
 {% endblock %}
