FACT-186: Update to beta banner + clean up controller

--- a/src/main/views/template.njk
+++ b/src/main/views/template.njk
@@ -17,7 +17,7 @@
 {% block beforeContent %}
   {{ govukPhaseBanner({
       tag: {
-        text: "alpha"
+        text: "beta"
       },
       html: feedback + languageToggle
     })
