FACT-186: function tests

--- a/src/main/views/template.njk
+++ b/src/main/views/template.njk
@@ -41,7 +41,7 @@
           text: "Privacy"
         },
         {
-          href: "https://www.gov.uk/help/cookies",
+          href: "",
           text: "Cookies"
         },
         {
