--- a/src/main/views/choose-service.njk
+++ b/src/main/views/choose-service.njk
@@ -10,12 +10,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-  {{ super() }}
-
-  {{ govukBackLink({
-    text: "Back",
-    href: backPath
-  }) }}
+<a href="/" class="govuk-back-link" onclick="goBack(event);">Back</a>
 {% endblock %}
 
 {% block content %}
