--- a/src/main/views/court-details/in-person-court.njk
+++ b/src/main/views/court-details/in-person-court.njk
@@ -8,12 +8,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-  {{ super() }}
-
-  {{ govukBackLink({
-    text: "Back",
-    href: "/courts"
-  }) }}
+<a href="/" class="govuk-back-link" onclick="goBack(event);">Back</a>
 {% endblock %}
 
 {% block content %}
