updating postcode results page

--- a/src/main/assets/scss/main.scss
+++ b/src/main/assets/scss/main.scss
@@ -1,5 +1,6 @@
 @import '~govuk-frontend';
 @import 'court-details';
+@import 'postcode-results';
 
 // sass-lint:disable class-name-format
 .govuk-phase-banner__text {
